# libMXF

./: .gitignore  Makefile  Makefile.am  configure.ac  make_install.sh  vars.mk
examples/: Makefile  Makefile.am  Makefile.dist
examples/archive/: Makefile  Makefile.am  archive_types.h  bbc_archive_extensions_data_model.h  bbc_d3_extensions_data_model.h  bbcarchive_mxflib.xml  bbcd3_mxflib.xml  parse_infax_dump.pl  test_mxf_page_file.c  test_timecode_index.c  timecode_index.c  timecode_index.h
examples/archive/info/: Makefile  Makefile.am  PSE_html_summary.pl  archive_mxf_info.c  archive_mxf_info_lib.c  archive_mxf_info_lib.h  d3_mxf_info.c  d3_mxf_info_lib.c  d3_mxf_info_lib.h
examples/archive/write/: Makefile  Makefile.am  Makefile.dist  test_write_archive_mxf.c  update_archive_mxf.c  write_archive_mxf.c  write_archive_mxf.h
examples/avidmxfinfo/: Makefile  Makefile.am  Makefile.dist  avid_mxf_info.c  avid_mxf_info.h  main.c  test_avidmxfinfo.sh
examples/reader/: Makefile  Makefile.am  Makefile.dist  mxf_essence_helper.c  mxf_essence_helper.h  mxf_index_helper.c  mxf_index_helper.h  mxf_op1a_reader.c  mxf_op1a_reader.h  mxf_opatom_reader.c  mxf_opatom_reader.h  mxf_reader.c  mxf_reader.h  mxf_reader_int.h  test_mxf_reader.c
examples/transfertop2/: Makefile  Makefile.am  Makefile.dist  avid_mxf_to_p2.c  avid_mxf_to_p2.h  avidp2transfer.cpp  avidp2transfer.h  icon_avid_to_p2.h  test_avid_mxf_to_p2.c  test_avidp2transfer.cpp  xml_writer.c  xml_writer.h
examples/vlc/: mxf_vlc.c
examples/writeaviddv50/: Makefile  Makefile.am  Makefile.dist  writeaviddv50.c
examples/writeavidmxf/: Makefile  Makefile.am  Makefile.dist  main.c  package_definitions.c  package_definitions.h  test_write_avid_mxf.c  test_writeavidmxf.sh  write_avid_mxf.c  write_avid_mxf.h
htdocs/: index.html
lib/: Makefile  Makefile.am
lib/include/mxf/: mxf.h  mxf_avid.h  mxf_avid_extensions_data_model.h  mxf_avid_labels_and_keys.h  mxf_avid_metadict_blob.h  mxf_avid_metadictionary.h  mxf_baseline_data_model.h  mxf_data_model.h  mxf_essence_container.h  mxf_extensions_data_model.h  mxf_file.h  mxf_header_metadata.h  mxf_index_table.h  mxf_labels_and_keys.h  mxf_list.h  mxf_logging.h  mxf_macros.h  mxf_metadata.h  mxf_p2.h  mxf_p2_extensions_data_model.h  mxf_page_file.h  mxf_partition.h  mxf_primer.h  mxf_types.h  mxf_utils.h  mxf_version.h
lib/metadata/: mxf_descriptor.c  mxf_metadata_int.h  mxf_package.c  mxf_structural_component.c  mxf_track.c
lib/msvc_build/libMXF/: libMXF.sln  libMXF.vcproj
lib/mxf/: mxf_data_model.c  mxf_essence_container.c  mxf_file.c  mxf_header_metadata.c  mxf_index_table.c  mxf_labels_and_keys.c  mxf_list.c  mxf_logging.c  mxf_partition.c  mxf_primer.c  mxf_utils.c  mxf_version.c
lib/products/: mxf_avid.c  mxf_avid_dictionary.c  mxf_avid_metadict_blob.c  mxf_avid_metadictionary.c  mxf_p2.c
lib/utils/: mxf_page_file.c  mxf_uu_metadata.c
msvc_build/: MXFDump.sln  libMXF-All.sln  readme_MXFDump.txt  transfertop2.sln
msvc_build/lib/: libMXF.vcproj
test/: Makefile  Makefile.am  check_diff.py  check_mxf.sh  create_test_set.sh  extract_ignore_lines.py  run_test.sh  run_test_nodiff.sh
test/MXFDump/: Makefile  README.txt
test/test_lib/: Makefile  Makefile.am  Makefile.dist  essencecontainer.dump  headermetadata.dump  headermetadata.ignore  indextable.dump  indextable.ignore  partition.dump  primer.dump  test_datamodel.c  test_file.c  (+5 more)
tools/: Makefile  Makefile.am
(+33 files in other folders)
