lib_LTLIBRARIES = libMXF.la

libMXF_la_SOURCES = \
	mxf/mxf_version.c mxf/mxf_list.c mxf/mxf_utils.c mxf/mxf_logging.c \
	mxf/mxf_file.c mxf/mxf_partition.c mxf/mxf_partition.c mxf/mxf_primer.c \
	mxf/mxf_essence_container.c mxf/mxf_index_table.c mxf/mxf_data_model.c \
	mxf/mxf_header_metadata.c mxf/mxf_labels_and_keys.c \
	products/mxf_avid.c products/mxf_avid_metadictionary.c \
	products/mxf_avid_dictionary.c products/mxf_p2.c \
	utils/mxf_uu_metadata.c utils/mxf_page_file.c

libMXF_la_LDFLAGS = -avoid-version
